smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-object2.smithy
// Syntax error at line 4, column 1: Expected RPAREN(')') but found IDENTIFIER('string') | Model
namespace com.foo
@foo("bar"
string MyString
